Ajax return message in User-mgmt reset if no user found.

--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/users_mgmt.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/users_mgmt.html
@@ -126,7 +126,8 @@
               $("#student_data_set_div").append(stud_table);
             }
             else{
-              $("#student_data_set_div").html("No results found")      
+              $("#student_data_set_div").html("No results found")
+              $("#student_count_div").html("")
             }
           },
         });
