--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/action_panel.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/action_panel.html
@@ -409,7 +409,7 @@
 						{% if user.is_authenticated %}
 							{% if not is_gstaff %}
 								{% if user_is_joined == "joined" %}
-									<input class="tiny button radius subscription_policy right-btn" title="Unsubscribe from this group" type="button" id="unsubscribe_from_grp" value="{% trans 'Unsubscribe' %}"
+									<input data-user-id={{request.user.id}} class="tiny button radius subscription_policy right-btn" title="Unsubscribe from this group" type="button" id="unsubscribe_from_grp" value="{% trans 'Unsubscribe' %}"
 									{% if group_object.name == "home" %}
 										disabled="disabled" 
 									{% endif %}
@@ -419,7 +419,7 @@
 									{% endcomment %}
 
 								{% elif user_is_joined == "not" %}
-									<input class="tiny button radius right-btn subscription_policy" type="button" id="subscribe_to_grp" value="{% trans 'Join' %}" title="Join this Group">
+									<input data-user-id={{request.user.id}} class="tiny button radius right-btn subscription_policy" type="button" id="subscribe_to_grp" value="{% trans 'Join' %}" title="Join this Group">
 									{% comment %}
 										<input class="tiny button radius right-btn" type="button" value="{% trans 'Follow' %}">
 									{% endcomment %}
@@ -436,8 +436,15 @@
             {% if is_gstaff %}
 				<!-- Subscribe Users and Subscribe Admins buttons-->
 				<div class="row btn-row">
-					{% include "ndf/invite_users.html" with node=group_object %}
-					{% include "ndf/invite_admins.html" with node=group_object %}
+                   <a data-reveal-id="manage_users_modal" class="tiny expand button radius mod-btn" href="{% url 'manage_users' group_id %}">Manage Members</a>                    
+
+                <div id="manage_users_modal" class="reveal-modal large" data-reveal style="position:absolute;"> 
+                    <div id="group_drawer">
+                    {% include "ndf/user_search.html" with action_on_user="Manage" subscription_status=True %}
+                    </div>
+                    <a class="close-reveal-modal">&#215;</a>
+                </div>          
+
 				</div>
 
 				<!-- Moderate Resources or Moderation Status button -->
@@ -537,11 +544,13 @@
 
 
 	$(document).on("click", "#subscribe_to_grp", function() {
+        user_id = $(this).attr('data-user-id')
         $.ajax({
                 type: "POST",
                 url: "{% url 'enroll_to_course' group_object.pk %}",
                 datatype: "json",
                 data:{
+                        user_id: user_id,
                        csrfmiddlewaretoken: '{{ csrf_token }}'
                   },
               success: function(data) {
@@ -552,25 +561,34 @@
                     alert("Something went wrong. Please try again later.")
                 }
                 else{
-                    $(".subscription_policy")
-                        .attr("id", "unsubscribe_from_grp")
-                        .attr("value", "Unsubscribe")
-                        .attr("title", "Unsubscribe from this group")
-                    // Update Courp member count in Group-dashboard
-                    $(".grp_mem_count")
-                        .text(grp_mem_count)
-                        .attr('value',grp_mem_count)
+                    if($(this).hasClass('subscription_policy')){
+                        $(".subscription_policy")
+                            .attr("id", "unsubscribe_from_grp")
+                            .attr("value", "Unsubscribe")
+                            .attr("title", "Unsubscribe from this group")
+                        // Update Courp member count in Group-dashboard
+                        $(".grp_mem_count")
+                            .text(grp_mem_count)
+                            .attr('value',grp_mem_count)
+                    }
+                    else{
+                        $(this).attr("id", "unsubscribe_from_grp")
+                        $(this).text("Remove")
+                    }
+
                 }
               }
         });
     });
 
     $(document).on("click", "#unsubscribe_from_grp", function() {
+        user_id = $(this).attr('data-user-id')
         $.ajax({
                 type: "POST",
                 url: "{% url 'unsubscribe_from_group' group_object.pk %}",
                 datatype: "json",
                 data:{
+                        user_id: user_id,
                        csrfmiddlewaretoken: '{{ csrf_token }}'
                   },
               success: function(data) {
@@ -581,18 +599,24 @@
                     alert("Something went wrong. Please try again later.")
                 }
                 else{
-                    $(".subscription_policy")
-                        .attr("id", "subscribe_to_grp")
-                        .attr("value", "Join")
-                        .attr("title", "Join this Group")
-                    // Update Courp member count in Group-dashboard
-                    $(".grp_mem_count")
-                        .text(grp_mem_count)
-                        .attr('value',grp_mem_count)
+                    if($(this).hasClass('subscription_policy')){
+                        $(".subscription_policy")
+                            .attr("id", "subscribe_to_grp")
+                            .attr("value", "Join")
+                            .attr("title", "Join this Group")
+                        // Update Courp member count in Group-dashboard
+                        $(".grp_mem_count")
+                            .text(grp_mem_count)
+                            .attr('value',grp_mem_count)
+                    }
+                    else{
+                        $(this).attr("id", "subscribe_to_grp")
+                        $(this).text("Add")
+                    }
                 }
               }
         });
-	});
+    });
 
 
 </script>
