Maintain context for ajax calls reqd for subscribe/unsubscribe

--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/action_panel.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/action_panel.html
@@ -553,6 +553,7 @@
                         user_id: user_id,
                        csrfmiddlewaretoken: '{{ csrf_token }}'
                   },
+                context: this,
               success: function(data) {
                 data = JSON.parse(data)
                 success_state = data["success"]
@@ -572,8 +573,9 @@
                             .attr('value',grp_mem_count)
                     }
                     else{
-                        $(this).attr("id", "unsubscribe_from_grp")
-                        $(this).text("Remove")
+                        $(this)
+                            .attr("id", "unsubscribe_from_grp")
+                            .text("Remove")
                     }
 
                 }
@@ -591,30 +593,32 @@
                         user_id: user_id,
                        csrfmiddlewaretoken: '{{ csrf_token }}'
                   },
-              success: function(data) {
-                data = JSON.parse(data)
-                success_state = data["success"]
-                grp_mem_count = data["member_count"]
-                if(!success_state){
-                    alert("Something went wrong. Please try again later.")
-                }
-                else{
-                    if($(this).hasClass('subscription_policy')){
-                        $(".subscription_policy")
-                            .attr("id", "subscribe_to_grp")
-                            .attr("value", "Join")
-                            .attr("title", "Join this Group")
-                        // Update Courp member count in Group-dashboard
-                        $(".grp_mem_count")
-                            .text(grp_mem_count)
-                            .attr('value',grp_mem_count)
+                context: this,
+                success: function(data) {
+                    data = JSON.parse(data)
+                    success_state = data["success"]
+                    grp_mem_count = data["member_count"]
+                    if(!success_state){
+                        alert("Something went wrong. Please try again later.")
                     }
                     else{
-                        $(this).attr("id", "subscribe_to_grp")
-                        $(this).text("Add")
+                        if($(this).hasClass('subscription_policy')){
+                            $(".subscription_policy")
+                                .attr("id", "subscribe_to_grp")
+                                .attr("value", "Join")
+                                .attr("title", "Join this Group")
+                            // Update Courp member count in Group-dashboard
+                            $(".grp_mem_count")
+                                .text(grp_mem_count)
+                                .attr('value',grp_mem_count)
+                        }
+                        else{
+                            $(this)
+                                .text("Add")
+                                .attr("id", "subscribe_to_grp")
+                        }
                     }
                 }
-              }
         });
     });
 
