--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/action_panel.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/action_panel.html
@@ -440,7 +440,7 @@
 
                 <div id="manage_users_modal" class="reveal-modal large" data-reveal style="position:absolute;"> 
                     <div id="group_drawer">
-                    {% include "ndf/user_search.html" with action_on_user="Manage" subscription_status=True %}
+                    {% include "ndf/user_search_widget.html" with action_on_user="Manage" subscription_status=True %}
                     </div>
                     <a class="close-reveal-modal">&#215;</a>
                 </div>          
