--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/users_mgmt.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/users_mgmt.html
@@ -54,7 +54,7 @@
     <a class="close-reveal-modal">&#215;</a>
   </div>
 
-    {% include "ndf/user_search.html" with action_on_user="Test" %}
+    {% include "ndf/user_search_widget.html" with action_on_user="Test" %}
 {% endblock %}
 
 {% block script %}
