--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/user_search_widget.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/user_search_widget.html
@@ -20,7 +20,6 @@
     $(document).on( 'click', '.search_stud_btn', function (e) {
         var search_text = $(".student_name").val().toLowerCase();
         var search_text_len = (search_text.length);
-        var action_text = "{{action_on_user}}"
         var subscription_status_val = false
         {% if subscription_status %}
           var subscription_status_val = "{{subscription_status}}"
@@ -54,34 +53,50 @@
               var cell3 = header_row.insertCell(2)
               cell1.innerHTML = "<b>No.</b>"
               cell2.innerHTML = "<b>Name</b>"
-              cell3.innerHTML = "<b>Membership</b>"
-              {% if not subscription_status %}
+              {% if subscription_status %}
+                cell3.innerHTML = "<b>Member</b>"
                 var cell4 = header_row.insertCell(3)
-                cell4.innerHTML = "<b>Action</b>"
+                cell4.innerHTML = "<b>Admin</b>"
+              {% else %}
+                cell3.innerHTML = "<b>Action</b>"
               {% endif %}
+
               var table_body = stud_table.createTBody();
     
               $.each(data, function(index_val,tuple_obj){
                 var data_row = table_body.insertRow(-1); 
                 data_row.id =  tuple_obj[0]
-                var serial_no_cell = data_row.insertCell(0);
-                var data_cell = data_row.insertCell(1);
-                var mem_cell = data_row.insertCell(2);
-                serial_no_cell.innerHTML = index_val + 1
-                data_cell.innerHTML = tuple_obj[1]
-                if(tuple_obj[2]){
-                  mem_cell.innerHTML = "<a id='unsubscribe_from_grp' data-user-id='"+tuple_obj[0]+"'>Remove</a>"
-                }
-                else{
-                  mem_cell.innerHTML = "<a id='subscribe_to_grp' data-user-id='"+tuple_obj[0]+"'>Add</a>"
-                }
-                data_cell.className = "username"
-              {% if not subscription_status %}
 
-                var action_on_user = data_row.insertCell(3);
-                action_on_user.innerHTML = "<a>"+ action_text + "</a>"
-                action_on_user.className = "action_on_user"
-              {% endif %}
+                var serial_no_cell = data_row.insertCell(0);
+                serial_no_cell.innerHTML = index_val + 1
+                var data_cell = data_row.insertCell(1);
+                data_cell.innerHTML = tuple_obj[1]
+                data_cell.className = "username"
+                
+                {% if not subscription_status %}
+                  var action_on_user = data_row.insertCell(2);
+                  action_on_user.innerHTML = "<a>Change Password</a>"
+                  action_on_user.className = "action_on_user"
+
+                {% else %}
+                  var mem_cell = data_row.insertCell(2);
+                  var admin_cell = data_row.insertCell(3);
+                  if(tuple_obj[2]){
+                    mem_cell.innerHTML = "<a id='unsubscribe_from_grp' data-user-id='"+tuple_obj[0]+"'>Remove</a>"
+                  }
+                  else{
+                    mem_cell.innerHTML = "<a id='subscribe_to_grp' data-user-id='"+tuple_obj[0]+"'>Add</a>"
+                  }
+
+                  // Add as Admin
+                  if(tuple_obj[3]){
+                    admin_cell.innerHTML = "<a id='unsubscribe_from_grp' data-user-id='"+tuple_obj[0]+"' data-user-admin='True'>Remove</a>"
+                  }
+                  else{
+                    admin_cell.innerHTML = "<a id='subscribe_to_grp' data-user-id='"+tuple_obj[0]+"' data-user-admin='True'>Add</a>"
+                  }
+
+                {% endif %}
   
               })
 
