blockui for ajax processing screen

--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/base.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/base.html
@@ -177,6 +177,8 @@
       $(document).foundation();
 
     // Register global ajax start and complete events to show ajax loader when request is in process
+      $(document).ajaxStart($.blockUI).ajaxStop($.unblockUI);
+      /*
       $(document)
         .ajaxStart(function() {
           $('article').block({
@@ -203,6 +205,7 @@
         .ajaxStop(function() {
           $('article').unblock();
         });
+        */
 
     // Toggles the display of main sidebar for 12 col article view
       var toggleMainSidebar = function(){
