--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/theme.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/theme.html
@@ -212,7 +212,7 @@ margin-top:15px;
 	{% endif %}
 	</div>
 </div>
-	<div class="topic_stats panel" style="display:none; position:fixed; background-color:#ddd;border: 1px solid #1a1a1a;"> </div>
+	<div class="topic_stats panel" style="display:none; position:fixed; background-color:#ddd; right:20%;"> </div>
 
 {% endblock %}
 {% block meta_content %}
