get_ajax_contents 403 error raise handled.

--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/hierarchy_tree.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/hierarchy_tree.html
@@ -186,10 +186,10 @@
 
 				$.ajax({
 	            	url: "{% url 'get_topic_contents' groupid %}",
-	             	type: 'POST',
+					// type: 'POST',
 	             	data:{
 	             		node_id: topic_id,
-	             		csrfmiddlewaretoken: '{{ csrf_token }}'
+						// csrfmiddlewaretoken: '{{ csrf_token }}'
 	             	},
 	             	success: function(data){
 	             		
