--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/gbase.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/gbase.html
@@ -179,6 +179,9 @@
       $(document).foundation();
 
     // Register global ajax start and complete events to show ajax loader when request is in process
+      $(document).ajaxStart($.blockUI).ajaxStop($.unblockUI);
+      /*
+
       $(document)
         .ajaxStart(function() {
           $('article').block({
@@ -202,7 +205,7 @@
         .ajaxStop(function() {
           $('article').unblock();
         });
-
+        */
     // Toggles the display of main sidebar for 12 col article view
       var toggleMainSidebar = function(){
         $("main>aside").toggle();
