--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/node_details_base.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/node_details_base.html
@@ -72,6 +72,7 @@
 
 {% block collection_content %}
   {% check_group node.pk as is_group %}
+  {% comment %}
   {% if node.collection_set and not node.if_file.original.relurl and not is_group %}
       <div class="show-collection">    
         <a class=" {% if node.collection_set %}collection-exists{% endif %}"  style="width:100%" data-oid="{{node.pk|safe}}">
@@ -79,6 +80,7 @@
         </a>
      </div>
   {% endif %}
+  {% endcomment %}
   {% if node.collection_set %}
     <div id="view_collection">
       {% include "ndf/collection_ajax_view.html" %}  
