jsmol css modified

--- a/gnowsys-ndf/gnowsys_ndf/ndf/static/ndf/css/JSmol.css
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/static/ndf/css/JSmol.css
@@ -2,6 +2,7 @@ body
         {
             font-family:arial;
             font-size:14px;
+            line-height:24px;
         }
         a
         {
