Updated include statements with new template names.

--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/basecourse_group.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/basecourse_group.html
@@ -108,7 +108,7 @@
     <div class="medium-12 course-page-header">
     <div class="row " >
       <div class="course-header-background">
-        {% include 'ndf/upload_pic_widget.html' with url_name='course_about' widget_for="group_banner" is_banner=True is_profile=False no_update_btn=True%}
+        {% include 'ndf/widget_photo_upload.html' with url_name='course_about' widget_for="group_banner" is_banner=True is_profile=False no_update_btn=True%}
         <div class="course-header-background-layer"></div>
       </div>
       {% if is_gstaff %}
