--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/ggallerymodal.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/ggallerymodal.html
@@ -115,7 +115,7 @@
 
                 <div class="row image-brief">
                     <div class="small-12 columns">
-                        {% include "ndf/analytics_views.html" %}
+                        {% include "ndf/widget_analytics_views.html" %}
                         {% comment %}
                         <i class="fi-eye"></i>
                         <span>Avg&nbsp;</span>
