--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/groupdashboard.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/groupdashboard.html
@@ -162,7 +162,7 @@ $(document).ready(function()
   </h4>
 
   <div id="group_picture">
-  {% include "ndf/upload_pic_widget.html" with url_name='groupchange'  widget_for="Group_about" is_banner=False is_profile=True %}
+  {% include "ndf/widget_photo_upload.html" with url_name='groupchange'  widget_for="Group_about" is_banner=False is_profile=True %}
   </div>
 
 </br>
