--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/note_page.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/note_page.html
@@ -65,7 +65,7 @@
                         &nbsp;
                     <div style="display: inline-block;">
 
-                        {% include "ndf/analytics_views.html" %}
+                        {% include "ndf/widget_analytics_views.html" %}
                     </div>
                 </div>
             </div>
