--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/res_node_ajax_view.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/res_node_ajax_view.html
@@ -353,6 +353,6 @@
   {% if not is_group %}
     <br/>
     <div class="right">
-      {% include "ndf/analytics_views.html" with event_player_flag=True %}
+      {% include "ndf/widget_analytics_views.html" with event_player_flag=True %}
     </div>
   {% endif %}
