--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/uDashboard.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/uDashboard.html
@@ -18,7 +18,7 @@
      </ul>
   {% endif %}
   {% endcomment %}
-      {% include "ndf/upload_pic_widget.html" with url_name='dashboard' widget_for="userDashboard" is_banner=False is_profile=True %}
+      {% include "ndf/widget_photo_upload.html" with url_name='dashboard' widget_for="userDashboard" is_banner=False is_profile=True %}
       <hr/>
     <div class="action-btn-div">
     <span class="fi-graph-bar">
