--- a/gnowsys-ndf/gnowsys_ndf/ndf/static/ndf/scss/_app_styles.scss
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/static/ndf/scss/_app_styles.scss
@@ -24,7 +24,7 @@
 
 /*active color for side-nav links*/
 .side-nav li.active a:not(.button){
-    color:$side-nav-link-color-active;
+    color:$secondary-orange;
 }
 
 
@@ -45,24 +45,56 @@ pre{
 }
 
 @font-face {
-    font-family: "ubuntu-light";
+    font-family: "Rubik-Black";
     font-weight: light;
-    src: url('../../../fonts/ubuntu/Ubuntu-Light.ttf');
+    src: url('../../../fonts/Rubik/Rubik-Black.ttf');
 }
 @font-face {
-    font-family: "ubuntu-regular";
+    font-family: "Rubik-BlackItalic";
     font-weight: regular;
-    src: url('../../../fonts/ubuntu/Ubuntu-Regular.ttf');
+    src: url('../../../fonts/Rubik/Rubik-BlackItalic.ttf');
 }
 @font-face {
-    font-family: "ubuntu-medium";
+    font-family: "Rubik-Bold";
     font-weight: medium;
-    src: url('../../../fonts/ubuntu/Ubuntu-Medium.ttf');
+    src: url('../../../fonts/Rubik/Rubik-Bold.ttf');
 }
 @font-face {
-    font-family: "ubuntu-bold";
+    font-family: "Rubik-BoldItalic";
     font-weight: bold;
-    src: url('../../../fonts/ubuntu/Ubuntu-Bold.ttf');
+    src: url('../../../fonts/Rubik/Rubik-BoldItalic.ttf');
+}
+
+@font-face {
+    font-family: "Rubik-Italic";
+    font-weight: light;
+    src: url('../../../fonts/Rubik/Rubik-Italic.ttf');
+}
+@font-face {
+    font-family: "Rubik-Light";
+    font-weight: regular;
+    src: url('../../../fonts/Rubik/Rubik-Light.ttf');
+}
+@font-face {
+    font-family: "Rubik-LightItalic";
+    font-weight: medium;
+    src: url('../../../fonts/Rubik/Rubik-LightItalic.ttf');
+}
+@font-face {
+    font-family: "Rubik-Medium";
+    font-weight: bold;
+    src: url('../../../fonts/Rubik/Rubik-Medium.ttf');
+}
+
+@font-face {
+    font-family: "Rubik-MediumItalic";
+    font-weight: medium;
+    src: url('../../../fonts/Rubik/Rubik-MediumItalic.ttf');
+}
+@font-face {
+    font-family: "Rubik-Regular";
+    font-weight: bold;
+    src: url('../../../fonts/Rubik/Rubik-Regular.ttf');
 }
 /*
 @import url('../../../fonts/ubuntu/Ubuntu-Bold.ttf');
@@ -139,7 +171,7 @@ pre{
   &.unrated{
     /* If the user has not rated yet */
     &:checked ~ label:before{
-      color: $secondary-color;
+      color: $primary-black;
     }
 }
 
@@ -169,7 +201,7 @@ pre{
     & + label:hover ~ label:before,
     & + label:hover:before {
       content: '\2605'; /* BLACK STAR */
-      color: $highlight-color;
+      color: $secondary-orange;
       text-shadow: 0 0 1px #333;
     }
 }
@@ -199,7 +231,7 @@ pre{
     [type*="radio"] + label:hover ~ label:before,
     [type*="radio"] + label:hover:before {
         content: '\2605'; /* BLACK STAR */
-        color: $highlight-color;
+        color: $secondary-orange;
         text-shadow: 0 0 1px #333;
     }
 }
@@ -218,8 +250,8 @@ pre{
 // ------| following style lines were there in _metastudio_styles.scss |------
 
 body{
-    background-color: #F2F2F2;
-    font-family: 'ubuntu-regular';
+    background-color: linear-gradient(to right, $theme-orange, $theme-pink);
+    font-family: 'Rubik-';
 }
 
 
@@ -230,7 +262,7 @@ body{
 
   #first-header.top-bar {
 
-    background-color: #3e3e3e;
+    background-color: $primary-blue;
     @media only screen and (min-width: 40.063em){
       height: auto;
     }
@@ -257,14 +289,14 @@ body{
 
       .top-bar-section li a:not(.button), .top-bar-section li {
           // background-color: scale-color($topbar-bg-color, $lightness: 10%);
-          background-color: #3e3e3e;
-          color: #ececec;
+          background-color: $primary-blue;
+          color: $secondary-blue;
       }
 
 
       .top-bar-section li a:not(.button):hover, .top-bar-section li:not(.has-form):hover {
-          background-color: scale-color($theme-color-invert, $lightness: 10%) !important;
-          color: #ececec;
+          background-color: $primary-blue !important;
+          color: $secondary-orange;
           // background-color: #E1E1E1;
       }
   }
@@ -314,24 +346,24 @@ body{
       }
 
       .top-bar-section li.active a:not(.button):hover, .top-bar-section li.active:hover{
-        background-color: scale-color($theme-color-invert, $lightness: 10%) !important;
+        background-color: $primary-blue !important;
       }
 
       .top-bar-section li.active:not(.has-form) > a:not(.button){
-          background-color: scale-color($theme-color-invert, $lightness: 15%);
+          background-color: $primary-blue;
           // background-color: #fafafa
       }
 
       .top-bar-section li a:not(.button), .top-bar-section li {
           // background-color: scale-color($topbar-bg-color, $lightness: 10%);
-          background-color: #fafafa;
-          color: gray;
+          background-color: $primary-blue;
+          color: $secondary-blue;
           // line-height: 49px;
       }
 
       .top-bar-section li a:not(.button):hover, .top-bar-section li:not(.has-form):hover {
-          background-color: scale-color($theme-color-invert, $lightness: 10%);
-          color: #fff;
+          background-color: $primary-blue;
+          color:$secondary-orange;
           // background-color: #E1E1E1;
       }
     }
@@ -410,16 +442,16 @@ body{
 
     .active{
         // background-color: $theme-text-color !important;
-        background-color: scale-color($theme-color-invert, $lightness: 20%) !important;
+        background-color: $primary-blue !important;
     }
 
     // user logout option of RHS dropdown
     .logout{
-        background-color: $alert-color !important;
+        background-color: $secondary-blue !important;
     }
 
     .logout:hover {
-        background-color: darken($alert-color, 10%) !important;
+        background-color: $secondary-orange !important;
         transition: background-color 400ms ease-out;
     }
 
@@ -569,7 +601,7 @@ main>nav{
     position: relative;
     z-index: 10;
     &>.button-bar{
-        background-color: $active-color;
+        background-color: $primary-blue;
         .button-group{
             margin: 0;
             &.tools{
@@ -614,7 +646,7 @@ main>nav{
 
         &.active{
             .button{
-                background-color: $primary-color;
+                background-color: $primary-blue;
                 color:white;
             }
         }
@@ -683,7 +715,7 @@ main>aside{
     .side-nav.collection{
         background-color: #444;
         padding: 0;
-        border-bottom: 2px solid $active-color;
+        border-bottom: 2px solid $secondary-orange;
         margin: 0;
         li{
             border-bottom: 1px solid #555;
@@ -691,9 +723,9 @@ main>aside{
                 border-left: 2px solid black;
             }
             &.active a,a:hover{
-                color:white!important;
-                border-left: 2px solid $active-color;
-                background-color: $active-color;
+                color:$secondary-orange!important;
+                //border-left: 2px solid $active-color;
+                background-color: $primary-blue;
             }
         }
     }
@@ -796,7 +828,7 @@ article{
   &.unapproved{
       opacity: 1;
       border-style: solid;
-      border-color: $alert-color;
+      //border-color: $alert-color;
   }
 
   &:hover{
@@ -818,7 +850,7 @@ article{
     top: -10px;
     right: 10px;
     font-size: 3rem;
-    color: $theme-color;
+    //color: $theme-color;
     opacity: 0.3;
   }
 
@@ -862,7 +894,7 @@ article{
       margin-top: 1rem;
       font-size: 70%;
       clear: both;
-      color: $meta-color;
+    //  color: $meta-color;
       .age{
           display: none;
           position: absolute;
@@ -876,7 +908,7 @@ article{
 
 .edit-card{
   position: relative;
-  background-color: $bg-color;
+//  background-color: $bg-color;
   padding:10px;
   //  border: 1px dashed darken($bg-color,10%);
   display: block;
@@ -894,11 +926,11 @@ article{
             border: 1px transparent;
         }
         dd.active a{
-            color:$active-color;
+            ////color:$active-color;
             border: 1px solid;
         }
         dd:hover a{
-            color:$active-color;
+            //color:$active-color;
         }
 
         i{
@@ -1346,7 +1378,8 @@ aside#help{
   }
 
 .scard-image {
-    padding:0px;
+    padding-top:100px;
+    padding-left: 50px;
     margin:0px;
     height:100%;
     background-position:center;
@@ -1360,7 +1393,8 @@ aside#help{
     margin: 0 auto;
     opacity: 0.9;
     //width:100%;
-    height:100%;
+    height:50%;
+    width: 50%;
   }
 
   i {
@@ -2144,19 +2178,21 @@ div.show-image:hover div.fullscreen-icon{
 .course-page {
     position: relative;
     background-size: 100% 100%;
-    height: 100%;
+    height: 100 vh;
     margin-top: 10px;
 
     >.container {
       background-color: #fff;
       padding: 0px 0px;
+      width:1000px;
+      height: 100 vh;
       /*overflow-x: hidden;*/
       box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.3);
     }
 
 }
 .course-page-opacity {
-    height: 100%;
+    height: 100 vh;
     width: 100%;
     position: absolute;
     opacity: 0.6;
@@ -2167,11 +2203,13 @@ div.show-image:hover div.fullscreen-icon{
     background: -ms-linear-gradient(left, #E9A900, #B0108D);
     background: -o-linear-gradient(left, #E9A900, #B0108D);
 }
-$course-envelop-height: 250px;
+$course-envelop-height: 300px;;
 $course-envelop-color: #fff;
 #envelop-cover {
   /*background: #A0148E;*/
   height: $course-envelop-height;
+  width: 1000px;
+
 
   .course-page-header {
     font-size: 35px;
@@ -2181,6 +2219,7 @@ $course-envelop-color: #fff;
     position: relative;
     height: $course-envelop-height;
     color: $course-envelop-color;
+    width: 1000px;
 
     label {
       color: $course-envelop-color;
@@ -2193,6 +2232,8 @@ $course-envelop-color: #fff;
       top: 0px;
       bottom: 0px;
       height: $course-envelop-height;
+      width: 1000px;
+      background-color: gray;
       img {
         width: auto;
         height: $course-envelop-height;
@@ -2296,29 +2337,30 @@ $course-envelop-color: #fff;
     left: 5px;
   }
   .course-tabs {
-    border: 0 solid silver;
-    border-width: 0px 0px 0px 0px;
+    border: 2px solid rgba(128,128, 128, 0.22);
+    
     text-align:center;
     position: absolute;
     bottom: 0;
     left: 50%;
     transform: translateX(-50%);
     width: 100%;
-    background-color: rgba(255, 255, 255, 0.8);
+    background-color: white;
 
     .tab-title {
-      border: 0 solid silver;
+      border: 2px solid silver;
       border-width: 0 0 0px 0px;
       background: transparent;
       margin-right: 0.4em;
       float: none !important;
       display: inline-block;
-      border-top: 5px solid transparent;
+      border-bottom: 5px solid transparent;
+      color: $primary-orange;
 
       a {
-        color: #6F669E;
-        font-weight: 600;
-        font-size: 15px;
+        color: $primary-orange;
+        font-weight: normal;
+        font-size: 14px;
         letter-spacing: -0.3px;
         padding: 0rem 0.8rem 0.4rem;
       }
@@ -2326,9 +2368,13 @@ $course-envelop-color: #fff;
       &.active {
         border-width: 0px 0px 0px 0px;
         background: #FFFFFF;
-        border-top: 5px solid #F11FD0;
+        border-bottom: 5px solid $secondary-orange;
+        font-size: 12px;
+        font-weight: 400;
+        padding-top: 10px;
         a {
-          color: #6153AE;
+          color: $primary-orange;
+          font-weight: 600;
         }
       }
 
@@ -2864,6 +2910,7 @@ $course-envelop-color: #fff;
   }
   .notebook-body {
     padding: 0px 0px;
+    height: 100 vh;
 
     .note-cards {
       .row {
@@ -3609,6 +3656,7 @@ $course-envelop-color: #fff;
 .user-comment {
   display: inline-flex;
   width: 100%;
+
 
   >div {
     display: inline-block;
@@ -4577,7 +4625,7 @@ course-title{
     border: 1px solid #eee;
 }
 .processing-screen{
-  background-color:$theme-color !important;
+//  background-color:$theme-color !important;
 }
 
 .processing-screen-label{
