audio recoder related js aded in base

--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/base.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/base.html
@@ -19,6 +19,8 @@
   <link rel="shortcut icon" href="{{site.FAVICON}}">
 
   <!-- Foundation 5 - Responsive CSS Framework http://foundation.zurb.com/docs/css.html-->
+    <script src="/static/ndf/js/MediaStreamRecorder.js"></script> 
+  <script src="/static/ndf/js/adapter.js"></script>
   <link rel="stylesheet" href="/static/ndf/bower_components/foundation/css/normalize.css">
   <link rel="stylesheet" href="/static/ndf/css/themes/{{site.SITE_NAME|lower}}/styles.css">
 
