jhapp listing in apps

--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/html_editor.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/html_editor.html
@@ -20,7 +20,7 @@
 
 <textarea id="ckeditor_textarea"  class="ckeditor_textarea" name="{{var_name}}" placeholder="{% blocktrans %}  {{content}} {% endblocktrans %}" value="{{var_value}}" rows="10" cols="80"> {{var_value}} </textarea>
 
-<div id="group_imgs_on_modal" class="reveal-modal" data-reveal aria-labelledby="modalTitle" aria-hidden="true" role="dialog" >
+<div id="group_imgs_on_modal" class="reveal-modal editor_modal" data-reveal aria-labelledby="modalTitle" aria-hidden="true" role="dialog" >
 </div>
 <script>
     if("{{ckeditor_toolbar}}" == "GgallaryCommentsToolbar"){
